--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="./js/task-1.js" defer></script>
     <script src="./js/task-2.js" defer></script>
     <script src="./js/task-3.js" defer></script>
+    <script src="./js/task-4.js" defer></script>
   </head>
   <body>
-    <h1>TEST</h1>
+    <h1>goit-js-hw-02</h1>
   </body>
 </html>
